Event page hero section overflow fixed

--- a/eventSty.css
+++ b/eventSty.css
@@ -438,7 +438,7 @@ figure.snip1192 .author h5 span {
         font-size: 0.8rem;
         /* line-height:rem; */
         line-height:1.2rem;
-        width:100%;
+        /* width:100%; */
     }
     .button-89{
         font-size:0.9rem;
